# sp-exam

./: .gitignore  CMakeLists.txt  README.md
include/: json.h
src/: candle_stick.h  main.cpp  oscillator_result.h  stock.h  stock_parser.h  trade.h
test/: test.json  test_stock_trading.cpp
